# qonfig

./: .coverage  .gitignore  .gitmodules  .pyrightconfig.json  .zenodo.json  CITATION.cff  README.md  citation.bib  flake.nix  mathjax_support.html  maturin.schema.jsonc  pyproject.toml  qonfig.jsonc  qonfig.yaml  setup.py  tox.ini
docs/: README.md
lib/: setup.cfg  setup.py
lib/pyyaml/: Makefile  setup.cfg  setup.py
lib/qonfig.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
plugins/: clean.py  link.py  shell.py
qonfig/: __init__.py  cli.py  config.py  context.py  dispatcher.py  plugin.py
qonfig/messenger/: __init__.py  color.py  level.py  messenger.py
qonfig/util/: __init__.py  compat.py  module.py  singleton.py  string.py
scripts/: quickstart.sh
test/: .coverage  README.md  Vagrantfile  driver-lib.bash  test  test-lib.bash  test_travis
test/tests/: clean-missing.bash  clean-nonexistent.bash  clean-outside.bash  config-blank.bash  config-empty.bash  config-json-tabs.bash  config-json.bash  defaults.bash  link-environment-user-expansion-target.bash  link-environment-variable-expansion-source-extended.bash  link-environment-variable-expansion-source.bash  link-environment-variable-expansion-target.bash  link-environment-variable-unset.bash  link-force-leaves-when-nonexistent.bash  link-force-overwrite-symlink.bash  link-leaves-file.bash  link-relative.bash  link-relink-leaves-file.bash  link-relink-overwrite-symlink.bash  link-relink-relative-leaves-file.bash  plugin-dir.bash  plugin.bash  shell-allow-stdout.bash  shell-disables-stdout.bash
tools/git-submodule/: install
tools/hg-subrepo/: install
