# /qompassai/dotfiles/.config/pyproject/pyproject.toml
# Qompass AI Pyproject Config
# Copyright (C) 2025 Qompass AI, All rights reserved
# ####################################################

[project]
name = "qonfig"
description = "Quantum AI models for healthcare and education"
readme = "README.md"
license-files = ["LICENSE-AGPL", "LICENSE-QCDA"]
authors = [{ name = "Matt A. Porter", email = "map@qompass.ai" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pyyaml"]
dynamic = ["version"]

[project.scripts]
qonfig = "qonfig.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
